Fix: button color contrast is not accessible. Change favicon background to match new color.

--- a/client/style/variables.css
+++ b/client/style/variables.css
@@ -31,16 +31,15 @@ $screen-lg-max: calc($screen-xl-min - 1px);
 
 $c--blue--light: #81ecec;
 $c--blue--dark: #636e72;
+$c--blue--very-dark: #073b4c;
 $c--gray--dark: #666C82;
 $c--gray--medium: #CCD0E0;
 $c--gray--light: #EDEEF2;
-$c--pink: #e84393;
-$c--pink--light: #fd79a8;
 
 $c--error: #d63031;
 $c--body--text: #151824;
-$c--link--body: $c--pink;
-$c--link--body--hover: $c--pink--light;
+$c--link--body: $c--blue--very-dark;
+$c--link--body--hover: $c--blue--dark;
 
 /* FONTS */
 
